--- a/styles.css
+++ b/styles.css
@@ -525,7 +525,7 @@ opacity: .8;
   background-position: center;
   background-repeat: no-repeat;
   padding: 20px;
-  color: black;
+  color: white;
   text-shadow: 1px, 1px, 1px black;
 }
 
