Updated #region Login

--- a/styles.css
+++ b/styles.css
@@ -364,7 +364,7 @@ footer{
 }
 /*#endregion ContactUs*/
 
-/*#region login*/
+/*#region Login*/
 
 /*LOGIN STYLING HERE*/
 .LoginContainer{
@@ -426,7 +426,7 @@ opacity: .8;
   border-radius: 5px;
   margin: 20px auto;
 }
-/*#endregion login*/
+/*#endregion Login*/
 
 /*#region ProductPage*/
 
